# kv

./: Cargo.toml  build.rs
proto/: client.proto  messages.proto  server.proto
src/: client.rs  errors.rs  main.rs  messenger.rs  server.rs  set.rs
src/client/: errors.rs  messenger.rs  stdin.rs
src/server/: errors.rs  messenger.rs  set.rs
