[package]
name = "kv"
version = "0.1.0"
authors = ["Jim Berlage <jim.berlage@reifyhealth.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0"
actix-rt = "1"
clap = "2"
log = "0"
simple_logger = "1"
zmq = { version = "0", features = ["vendored"] }
